fetchとserver.js書き込み

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         // GETリクエスト（クエリー）
         async getData() {
           // 自前のAPサーバーからfetchしてみる
+          const res = await fetch('/api');
           this.data = await res.json();
           console.log(this.data.message);
         }
